--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="row">
       <div class="col-md-15 bg-light text-center">
         <h1>Belly Button Biodiversity Dashboard</h1>
-        <p>What microbial species lurk in our belly buttons?</p>
+        <h3>What microbial species lurk in our belly buttons?</h3>
       </div>
     </div>
     <div class="row">
@@ -47,7 +47,7 @@
 
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="/Code/appa.js"></script>
+  <script src=".appa.js"></script>
   
 </body>
 
