--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-md-15 bg-light text-center">
+      <div class="col-md-12 jumbotron text-center">
         <h1>Belly Button Biodiversity Dashboard</h1>
-        <h3>What microbial species lurk in our belly buttons?</h3>
+        <p>Use the interactive charts below to explore the dataset</p>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-3">
+      <div class="col-md-2">
         <div class="well">
           <h5>Test Subject ID No.:</h5>
           <select id="selDataset" onchange="optionChanged(this.value)"></select>
@@ -48,6 +48,7 @@
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="./static/js/app.js"></script>
+  <script src="./static/js/bonus.js"></script>
   
 </body>
 
