--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="row">
       <div class="col-md-12 jumbotron text-center">
         <h1>Belly Button Biodiversity Dashboard</h1>
-        <p>Use the interactive charts below to explore the dataset</p>
+        <h4>What microbes live in our navels?</h4>
       </div>
     </div>
     <div class="row">
@@ -47,9 +47,7 @@
 
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="./static/js/app.js"></script>
-  <script src="./static/js/bonus.js"></script>
-  
+  <script src="./static/js/app.js"></script>  
 </body>
 
 </html>
