--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-md-12 jumbotron text-center">
+      <div class="col-md-12 bg-light text-center">
         <h1>Belly Button Biodiversity Dashboard</h1>
         <h4>What microbes live in our navels?</h4>
       </div>
